# airflow_with_mlflow

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow_home/: airflow.cfg  simple_auth_manager_passwords.json.generated
dags/: second_dag.py  train_modal_dag.py
